# w-tool

./: .gitignore  README.md  TODO.md  back.cjs  demo.http  design.md  jsconfig.json  package.json  vite.config.js
public/: data.json
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: base.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/components/: Store.vue  TheWelcome.vue
src/components/Request/: Body.vue  Child.vue  FormData.vue  Header.vue  Parameter.vue  Parent.vue  Query.vue  View.vue
src/components/common/: CodeEditor.vue
src/router/: index.js
src/stores/: parameter.js
src/utils/: index.js
src/views/: AboutView.vue  GitView.vue  NoteView.vue  ProccessView.vue  Request.vue  RequestView.vue
